# SceneGraphFusion

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  prepare_example_data.sh
Objects/Camera/: CameraParameters.h
Utils/: EvaluationHelper.h  define.h  eigen_glm.h  parser.hpp  util.h
app/: CMakeLists.txt
app/GraphSLAM/: CMakeLists.txt  main.cc
cmake/: ConfigureTimeDependency.cmake  External_Eigen3.CMakeLists.txt.in  External_Json.CMakeLists.txt.in  External_OpenCV.CMakeLists.txt.in  External_tinyply.CMakeLists.txt.in  FindJson.cmake  FindOnnxRuntime.cmake  Findtinyply.cmake  LinkAssimp.cmake  LinkEigen3.cmake  LinkJson.cmake  LinkOnnxRuntime.cmake  LinkOpenCV.cmake  Linktinyply.cmake  UseAssimp.cmake  UseCUDA.cmake  UseEigen3.cmake  UseJson.cmake  UseOnnxRuntime.cmake  UseOpenCV.cmake  UseOpenMP.cmake  Usetinyply.cmake
lib/inseg_lib/: camera.h  disjoint_set.h  image_pyramid.h  inseg.h  inseg_config.h  lib.h  main_config.h  map.h  map_config.h  map_segments.h  segmentation.h  segmentation_config.h  surfel.h
libDataLoader/: CMakeLists.txt
libDataLoader/ScanNetLoader/: CMakeLists.txt  sensorData.cpp  sensorData.h
libDataLoader/ScanNetLoader/sensorData1/: stb_image.h  stb_image_write.h
libDataLoader/include/dataLoader/: CameraParameters.h  dataloader_3rscan.h  dataloader_scannet.h  dataset3RScan.h  datasetScanNet.h  dataset_base.h  dataset_loader.h  dataset_loader_facotry.h  dataset_types.h  util.h
libDataLoader/src/: dataloader_3rscan.cpp  dataloader_scannet.cpp
libGraphSLAM/: CMakeLists.txt  GraphSLAM.cpp  GraphSLAM.h  config.cpp  config.h  declaration.h  disjSet.h  edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h
libGraphSLAM/graphPredictor/: EatGCN.cpp  EatGCN.h  GraphPredictor.cpp  GraphPredictor.h  MemoryBlock.h  OnnxModelBase.h  ParamLoader.h  UtilDataProcessing.h  UtilInSegPlyLoader.h  UtilMath.h
libGraphSLAMGUI/: CMakeLists.txt  CameraDrawer.cpp  CameraDrawer.h  GraphSLAMGUI.cpp  GraphSLAMGUI.h  ImageDrawer.cpp  ImageDrawer.h  Label_NYU40.h  SurfelDrawer.cpp  SurfelDrawer.h  TrajectoryDrawer.cpp  TrajectoryDrawer.h  meshRenderer.h
libGraphSLAMGUI/graphDrawer/: edge_drawer.cpp  edge_drawer.h  graph_drawer.cpp  graph_drawer.h  node_drawer.cpp  node_drawer.h  text_drawer.cpp  text_drawer.h
renderer/: Renderer.h  Renderer3RScan.h  RendererFactory.h  RendererScanNet.h  RendererType.h  Scan3R_json_loader.h
scripts/: README.md  RUN_GraphSLAM.py
